2007-06-08  Jonathan Pobst  <monkey@jpobst.com>

	* GroupBoxTest.cs: Argh! I cannot freaking get this right.  Remove the "!".

2007-06-08  Jonathan Pobst  <monkey@jpobst.com>

	* GroupBoxTest.cs: Missed an if.

2007-06-08  Jonathan Pobst  <monkey@jpobst.com>

	* GroupBoxTest.cs: AutoSize is theme dependent.

2007-06-08  Jonathan Pobst  <monkey@jpobst.com>

	* ComboBoxTest.cs: Add test for ScaleControl.

2007-06-08  Jonathan Pobst  <monkey@jpobst.com>

	* GroupBoxTest.cs: Add some 2.0 tests.

2007-06-08  Jonathan Pobst  <monkey@jpobst.com>

	* PanelTest.cs: Add.

2007-06-07  Jonathan Pobst  <monkey@jpobst.com>

	* ScrollableControlTest.cs: ScrollToControl test is theme dependent due to
	the width of scrollbars.

2007-06-07  Jonathan Pobst  <monkey@jpobst.com>

	* ScrollableControlTest.cs: Add test for ScrollToControl.

2007-06-06  Jonathan Pobst  <monkey@jpobst.com>

	* ScrollBarTest.cs, SplitterTest.cs: Add some 2.0 tests.
	* ScrollBarTest.cs: Comment out several tests that no longer compile due
	to bug #81818.

2007-06-06  Jonathan Pobst  <monkey@jpobst.com>

	* ButtonTest.cs: BehaviorAutoSize is font dependent, only run on windows.

2007-06-06  Jonathan Pobst  <monkey@jpobst.com>

	* ButtonBaseTest.cs: Add test for default values.
	* ButtonTest.cs: Add test for default values, add test for AutoSize.

2007-06-04  Gert Driesen  <drieseng@users.sourceforge.net>

	* PropertyGridTest.cs: Added test for bug #81796, and reworked
	SelectedGridItem_Null test to no longer check actual message.

2007-06-01  Jonathan Pobst  <monkey@jpobst.com>

	* FormTest.cs: Modify AutoSizeGrowAndShrink test to pass on all WM's.

2007-06-01  Jonathan Pobst  <monkey@jpobst.com>

	* FormTest.cs: Add tests for AutoSize'ing.

2007-05-23  Everaldo Canuto  <ecanuto@novell.com>

	* LabelTest.cs: Fix SizeTest for 2.0 profile since autosize theres
	diferent behavior on 2.0.

2007-06-01  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* ScrollableControlTest.cs: Add ResizeAnchoredTest.